--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ base {
 }
 
 repositories {
+	mavenCentral()
 	maven { url "https://maven.terraformersmc.com/releases/" }
 }
 
@@ -28,6 +29,8 @@ dependencies {
 
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+	implementation 'javax.websocket:javax.websocket-api:1.1'
 }
 
 test {
