--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ base {
 repositories {
 	mavenCentral()
 	maven { url "https://maven.terraformersmc.com/releases/" }
+	maven {
+		name = "CottonMC"
+		url = "https://server.bbkr.space/artifactory/libs-release"
+	}
 }
 
 dependencies {
@@ -32,6 +36,8 @@ dependencies {
 
 	implementation 'javax.websocket:javax.websocket-api:1.1'
 	implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.17' // Tyrus dependency
+
+	modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}")
 }
 
 test {
