Fixed libraries not including when building the mod

--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ dependencies {
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
-	implementation 'javax.websocket:javax.websocket-api:1.1'
-	implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.17' // Tyrus dependency
+	include(implementation 'javax.websocket:javax.websocket-api:1.1')
+	include(implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.17') // Tyrus dependency
 
 	modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}")
 }
