--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ loader_version=0.16.9
 # Mod Properties
 mod_version=3.0.2
 maven_group=me.tolek
-archives_base_name=modforlazypeople
+archives_base_name=modforlazypeople+1.21
 file_version=1.0.1
 
 # Dependencies
