--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.16.7
 
 # Mod Properties
-mod_version=3.0.1
+mod_version=3.0.2
 maven_group=me.tolek
-archives_base_name=modforlazypeople-MC1.20.4
+archives_base_name=modforlazypeople
 file_version=1.0.1
 
 # Dependencies
